04-managed-istio-ambient/kubernetes/kiali.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-system
