04-managed-istio-ambient/kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-demo
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: mesh-demo-waypoint
